<resources>
    <string name="app_name">Utility 360</string>

    <!-- todo remove in production -->
    <string name="currentAppUserName">Tony Stark</string>
    <string name="currentAppUserDesignation">Inventor</string>


    <!-- common -->
    <string name="readAll">Read all</string>
    <string name="appSettings">App settings</string>
    <string name="meter_id">Meter Id</string>
    <string name="previousReading">Previous reading</string>
    <string name="previousReadingOn">Previous reading on</string>
    <string name="connectionDate">Connection date</string>
    <string name="connectionType">Connection type</string>
    <string name="meterStatus">Meter status</string>
    <string name="nextReading">Next reading</string>
    <string name="settings">Settings</string>
    <string name="changePassword">Change password</string>
    <string name="support">Support</string>
    <string name="Logout">Logout</string>


    <!-- Login -->
    <string name="learnMoreAbout">Learn more about our </string>
    <string name="privacyPolicy">privacy policy</string>

    <!-- bottom navigation menu -->
    <string name="bottomNavHome">Home</string>
    <string name="bottomNavPendingTasks">Pending Tasks</string>
    <string name="bottomNavNotifications">Notifications</string>
    <string name="bottomNavProfile">Profile</string>


    <!--  -->
    <string name="welcome">Welcome</string>

    <!-- Login activity  -->
    <string name="loginBtn">Login</string>
    <string name="loginEmailHeading">Email</string>
    <string name="loginPasswordHeading">Password</string>


    <!-- home fragment, Home fragment design 2 -->
    <string name="meterReading">Meter Reading</string>
    <string name="meterInstallation">Meter Installation</string>
    <string name="siteVerification">Site Verification</string>
    <string name="siteService">Site Service</string>
    <string name="pipelineService">Pipeline Service</string>
    <string name="meterQrAssociation">Meter QR Association</string>
    <string name="meterReplacement">Meter Replacement</string>
    <string name="instructionsAndArticles">Instructions and articles</string>


    <!-- profile fragment -->
    <string name="profileFragmentTitle">Profile</string>


    <!-- Meter installation activity title -->
    <string name="meterInstallationActivityTitle">Meter Installation</string>

    <!-- meter installation form fragment -->
    <!-- mif => meter installation form fragment -->
    <string name="mif_sliderLabel">%d meter</string> <!-- to show on slider label-->
    <string name="mif_meterSerialNumberHeading">Meter serial number</string>
    <string name="mif_initialMeterReadingHeading">Initial meter reading</string>
    <string name="mif_meterPhotoHeading">Meter photo with clearly visible serial number</string>
    <string name="mif_sitePhotoHeading">Site photo with meter</string>
    <string name="mif_meterQrHeading">Scan meter QR</string>
    <string name="mif_extraPipeInvolvedHeading">Extra pipe involved ?</string>
    <string name="mif_additionalPipeLengthHeading">Length of additional pipe added (in meter)</string>
    <string name="mif_totalPipeInvolvedHeading">Total pipe involved</string>
    <string name="mif_submit">Submit</string>
    <string name="mif_cameraPermissionTitle">Allow Camera access ?</string>
    <string name="mif_cameraPermissionMessage">Allow Camera permission to access and capture Meter and Site image. To complete meter installation process uploading of meter and site image is compulsory.</string>
    <string name="mif_cameraPermissionPositiveBtn">Continue</string>
    <string name="mif_cameraPermissionNegativeBtn">Cancel</string>
    <string name="mif_cameraPermissionAlreadyAskedTitle">Allow use of Camera Permission</string>
    <string name="mif_cameraPermissionAlreadyAskedMessage">It seems you have been asked to allow Camera permission already and you denied.
As it is mandatory to upload Meter and Site image for Meter Installation, you can allow Camera permission from App settings and proceed.</string>
    <string name="mif_cameraPermissionAlreadyAskedNegativeBtn">Cancel</string>


    <!-- meter installation submission fragment -->
    <!--- misf => meter installation submission fragment -->
    <string name="misf_postSuccessBtn">Got it</string>
    <string name="misf_postFailureBtn">Retry</string>
    <string name="misf_retryBtn">Retry</string>
    <string name="misf_requestInProcess">Your request is being processed</string>
    <string name="misf_requestFailed">Your request failed for %s</string>
    <string name="misf_requestSuccess">Your request has been completed successfully </string>


    <!-- meter reading activity -->
    <string name="meterReadingActivityTitle_FindCustomer">Find customer</string>
    <string name="meterReadingActivityTitle_MeterReading">Meter reading</string>
    <string name="meterReadingLocationPermissionAlreadyAskedTitle">Allow use of Location Permission</string>
    <string name="meterReadingLocationPermissionAlreadyAskedMessage">It seems you have been asked to allow Location permission already and you denied.
As it is really important to have Meter reader\'s current location for Meter Reading, you can allow Location permission from App settings and proceed Meter reading process.</string>
    <string name="meterReadingLocationPermissionAlreadyAskedCancelBtn">Cancel</string>

    <string name="meterReadingLocationPermissionTitle">Allow use of Location usage ?</string>
    <string name="meterReadingLocationPermissionMessage">Meter reading process needs to access Meter Reader\'s current location for better tracking and transparency.
Kindly allow use of Location Service.</string>
    <string name="meterReadingLocationPermissionPositiveBtn">Continue</string>
    <string name="meterReadingLocationPermissionNegativeBtn">Cancel</string>


    <!-- find customer -->
    <string name="fc_findCustomerHeading">Find customer</string>
    <string name="fc_customerId">Customer Id</string>
    <string name="fc_findBtn">Find</string>
    <string name="fc_continueBtn">Continue</string>
    <string name="fc_findAnotherBtn">Find another</string>

    <!-- meter reading fragment -->
    <!-- mrf => meter reading fragment -->
    <string name="mrf_cameraPermissionTitle">Allow Camera access ?</string>
    <string name="mrf_cameraPermissionMessage">Allow Camera permission to access and capture Meter image. To complete meter reading process uploading of meter image is compulsory.</string>
    <string name="mrf_cameraPermissionPositiveBtn">Continue</string>
    <string name="mrf_cameraPermissionNegativeBtn">Cancel</string>
    <string name="mrf_cameraPermissionAlreadyAskedTitle">Allow use of Camera Permission</string>
    <string name="mrf_cameraPermissionAlreadyAskedMessage">It seems you have been asked to allow Camera permission already and you denied.
As it is really important to upload Meter image for Meter Reading, you can allow Camera permission from App settings and proceed Meter reading process.</string>
    <string name="mrf_cameraPermissionAlreadyAskedNegativeBtn">Cancel</string>
    <string name="mrf_meterReadingHeading">Meter reading</string>
    <string name="mrf_submit">Submit</string>


    <!-- customer verification activity / site verification activity -->
    <!-- sva => Site verification activity -->
    <string name="siteVerificationActivityTitle">Site verification</string>
    <string name="sva_locationPermissionTitle">Allow use of Location Permission usage ?</string>
    <string name="sva_locationPermissionMessage">Customer\'s Site Verifications process needs to access Field user\'s current location for better tracking and transparency.
Kindly allow use of Location Service and proceed.</string>
    <string name="sva_locationPermissionPositiveBtn">Continue</string>
    <string name="sva_locationPermissionNegativeBtn">Cancel</string>

    <string name="sva_locationPermissionAlreadyAskedTitle">Allow use of Location Permission usage ?</string>
    <string name="sva_locationPermissionAlreadyAskedMessage">It seems you have been asked to allow Location permission already and you denied.
As it is mandatory to have Field user\'s current location for Site Verification, you can allow Location permission from App settings and proceed.</string>
    <string name="sva_locationPermissionAlreadyAskedNegativeBtn">Cancel</string>


    <!-- site verification fragment -->
    <!-- svf => site verification fragment -->
    <string name="svf_addressVerifiedHeading">Is site address verified ?</string>
    <string name="svf_siteSuitableForHeading">Site is suitable for -</string>
    <string name="svf_siteDomesticUseHeading">Domestic usage</string>
    <string name="svf_siteCommercialUseHeading">Commercial usage</string>
    <string name="svf_nearestPipeConnectionHeading">How far the nearest pipe connection is ?</string>
    <string name="svf_connectionFloorHeading">In which floor the connection needed ?</string>
    <string name="svf_connectionFloorSupporting">*ground floor should be considered as 0</string>
    <string name="svf_siteImageHeading">Site image</string>
    <string name="svf_remarksHeading">Remarks</string>
    <string name="svf_siteRecommendationHeading">I recommend this site for connection.</string>
    <string name="svf_submit">Submit</string>
    <string name="retry">Retry</string>

    <string name="svf_permissionsRationalTitle">Allow required permissions</string>
    <string name="svf_permissionsRationalMessage">It is mandatory to upload customer\'s Site image in order to complete Site Verification. Thus you need to allow Camera and Storage permission to store or retrieve images from storage.</string>
    <string name="svf_permissionsRationalPositiveBtn">Continue</string>
    <string name="svf_permissionsRationalNegativeBtn">Cancel</string>

    <string name="svf_permissionsAlreadyAskedTitle">Allow required permissions</string>
    <string name="svf_permissionsAlreadyAskedMessage">It seems that you have already asked to allow Camera and Storage permission and you denied. Please allow Camera and Storage in order to capture or select image from gallery to complete Customer\'s Site verification.</string>
    <string name="svf_permissionsAlreadyAskedNegativeBtn">Cancel</string>




    <!-- settings activity -->
    <!-- settings fragment -->
    <string name="accountSettings">Account</string>
    <string name="generalSettings">General</string>
    <string name="notificationSettings">Notifications</string>


</resources>