<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="tech.sumato.utility360.presentation.activity.customer.verification.CustomerVerificationActivityViewModel" />

        <import type="androidx.databinding.ObservableField" />

        <import type="tech.sumato.utility360.data.remote.model.tasks.SiteVerificationTaskRequest" />

        <variable
            name="siteVerificationRequest"
            type="ObservableField&lt;SiteVerificationTaskRequest>" />

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/slate_50"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:fitsSystemWindows="true"
            app:elevation="0dp">


            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/toolbar_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fitsSystemWindows="true"
                android:paddingTop="0dp"
                android:paddingBottom="32dp"
                app:contentScrim="?attr/colorPrimary"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                app:toolbarId="@+id/toolbar">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    app:layout_collapseMode="parallax"
                    app:layout_scrollFlags="scroll|exitUntilCollapsed">

                    <!--<com.google.android.material.card.MaterialCardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="0dp"
                        app:cardBackgroundColor="@color/slate_50"
                        app:cardCornerRadius="0dp">-->

                    <!--<androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:paddingTop="0dp"
                        android:paddingBottom="32dp">-->

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="16dp"
                        android:paddingTop="16dp"
                        android:paddingEnd="16dp"
                        android:paddingBottom="0dp">

                        <com.google.android.material.imageview.ShapeableImageView
                            android:id="@+id/avatarView"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:scaleType="centerCrop"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintVertical_bias="0"
                            app:shapeAppearanceOverlay="@style/CircleImageView"
                            app:srcCompat="@drawable/avatar" />


                        <androidx.appcompat.widget.LinearLayoutCompat
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_marginStart="12dp"
                            android:orientation="vertical"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@id/avatarView"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintVertical_bias="0">

                            <com.google.android.material.textview.MaterialTextView
                                android:id="@+id/titleTextView"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:ellipsize="end"
                                android:maxLines="1"
                                android:textColor="@color/headingTextColor"
                                android:textSize="14sp" />

                            <com.google.android.material.textview.MaterialTextView
                                android:id="@+id/secondaryTextView"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="4dp"
                                android:ellipsize="end"
                                android:maxLines="1"
                                android:textColor="@color/secondaryTextColor"
                                android:textSize="12sp" />

                        </androidx.appcompat.widget.LinearLayoutCompat>


                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:id="@+id/customerInfoHolder"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="24dp"
                        android:layout_marginEnd="16dp"
                        android:orientation="vertical" />

                    <!--</androidx.appcompat.widget.LinearLayoutCompat>-->

                    <!--</com.google.android.material.card.MaterialCardView>-->

                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:visibility="gone"
                    app:layout_collapseMode="pin"
                    app:popupTheme="@style/Theme.AppTemplate.PopupOverlay" />


            </com.google.android.material.appbar.CollapsingToolbarLayout>


        </com.google.android.material.appbar.AppBarLayout>


        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">


            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                app:cardElevation="4dp"
                app:shapeAppearanceOverlay="@style/TopRoundedView.12">


                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="24dp"
                    android:orientation="vertical"
                    android:paddingStart="10dp"
                    android:paddingTop="16dp"
                    android:paddingEnd="10dp">


                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@string/svf_addressVerifiedHeading"
                            android:textColor="@color/headingTextColor"
                            app:layout_constraintBottom_toBottomOf="@id/addressVerifiedSwitch"
                            app:layout_constraintEnd_toStartOf="@id/addressVerifiedSwitch"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <com.google.android.material.switchmaterial.SwitchMaterial
                            android:id="@+id/addressVerifiedSwitch"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="@={siteVerificationRequest.site_address_verified}"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="1"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintVertical_bias="0.5" />

                    </androidx.constraintlayout.widget.ConstraintLayout>


                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/svf_siteSuitableForHeading"
                        android:textColor="@color/headingTextColor" />

                    <com.google.android.material.checkbox.MaterialCheckBox
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:checked="@={siteVerificationRequest.domestic}"
                        android:layoutDirection="rtl"
                        android:text="@string/svf_siteDomesticUseHeading"
                        android:textColor="@color/secondaryTextColor" />

                    <com.google.android.material.checkbox.MaterialCheckBox
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:checked="@={siteVerificationRequest.commercial}"
                        android:layoutDirection="rtl"
                        android:text="@string/svf_siteCommercialUseHeading"
                        android:textColor="@color/secondaryTextColor" />


                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/svf_nearestPipeConnectionHeading"
                        android:textColor="@color/headingTextColor" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        app:suffixText="meter">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="number"
                            android:text="@={siteVerificationRequest.nearest_point}" />

                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/svf_connectionFloorHeading"
                        android:textColor="@color/headingTextColor" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="number"
                            android:text="@={siteVerificationRequest.floor}" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/svf_connectionFloorSupporting"
                        android:textColor="@color/secondaryTextColor"
                        android:textSize="12sp" />


                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="0dp"
                        android:layout_marginTop="32dp"
                        android:layout_marginEnd="0dp"
                        android:text="@string/svf_siteImageHeading"
                        android:textColor="@color/headingTextColor" />

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/siteImageView"
                        android:layout_width="match_parent"
                        android:layout_height="194dp"
                        android:layout_marginStart="0dp"
                        android:layout_marginTop="12dp"
                        android:layout_marginEnd="0dp"
                        android:background="@color/slate_50"
                        app:shapeAppearanceOverlay="@style/RoundedCornerImageView.10" />


                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="0dp"
                        android:layout_marginTop="32dp"
                        android:layout_marginEnd="0dp"
                        android:text="@string/svf_remarksHeading"
                        android:textColor="@color/headingTextColor" />


                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="start|top"
                            android:inputType="textAutoCorrect|textMultiLine"
                            android:maxLines="3"
                            android:minLines="3"
                            android:text="@={siteVerificationRequest.remarks}" />

                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.checkbox.MaterialCheckBox
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="32dp"
                        android:checked="@={siteVerificationRequest.site_feasibility}"
                        android:text="@string/svf_siteRecommendationHeading" />


                    <com.google.android.material.button.MaterialButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:insetTop="0dp"
                        android:insetBottom="0dp"
                        android:text="@string/svf_submit"
                        android:id="@+id/submitBtn"
                        />



                </androidx.appcompat.widget.LinearLayoutCompat>

            </com.google.android.material.card.MaterialCardView>

        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>